syntax = "proto2";

package MMPro.micromsg;


message LabelPair {
	optional string _LabelName = 1;
	required uint32 _LabelID = 2;
}
